@@ -62,12 +62,6 @@ public abstract class AbstractGryoMessageSerializerV1d0 extends AbstractMessageS
     public static final String TOKEN_CUSTOM = "custom";
     public static final String TOKEN_SERIALIZE_RESULT_TO_STRING = "serializeResultToString";
 
-    /**
-     * @deprecated As of release 3.2.6, replaced by functionality provided by {@link AbstractMessageSerializer#TOKEN_IO_REGISTRIES}.
-     * @see <a href="https://issues.apache.org/jira/browse/TINKERPOP-1694">TINKERPOP-1694</a>
-     */
-    @Deprecated
-    public static final String TOKEN_USE_MAPPER_FROM_GRAPH = "useMapperFromGraph";
     public static final String TOKEN_BUFFER_SIZE = "bufferSize";
     public static final String TOKEN_CLASS_RESOLVER_SUPPLIER = "classResolverSupplier";
 
@@ -93,27 +87,7 @@ public abstract class AbstractGryoMessageSerializerV1d0 extends AbstractMessageS
 
     @Override
     public final void configure(final Map<String, Object> config, final Map<String, Graph> graphs) {
-        final GryoMapper.Builder builder;
-        final Object graphToUseForMapper = config.get(TOKEN_USE_MAPPER_FROM_GRAPH);
-        if (graphToUseForMapper != null) {
-            if (null == graphs) throw new IllegalStateException(String.format(
-                    "No graphs have been provided to the serializer and therefore %s is not a valid configuration", TOKEN_USE_MAPPER_FROM_GRAPH));
-
-            final Graph g = graphs.get(graphToUseForMapper.toString());
-            if (null == g) throw new IllegalStateException(String.format(
-                    "There is no graph named [%s] configured to be used in the %s setting",
-                    graphToUseForMapper, TOKEN_USE_MAPPER_FROM_GRAPH));
-
-            // a graph was found so use the mapper it constructs.  this allows gryo to be auto-configured with any
-            // custom classes that the implementation allows for
-            builder = g.io(GryoIo.build()).mapper();
-        } else {
-            // no graph was supplied so just use the default - this will likely be the case when using a graph
-            // with no custom classes or a situation where the user needs complete control like when using two
-            // distinct implementations each with their own custom classes.
-            builder = GryoMapper.build();
-        }
-
+        final GryoMapper.Builder builder = GryoMapper.build();
         addIoRegistries(config, builder);
         addClassResolverSupplier(config, builder);
         addCustomClasses(config, builder);
