@@ -39,13 +39,14 @@ TinkerPop 3.3.0 (Release Date: NOT OFFICIALLY RELEASED YET)
 * Added "attachment requisite" `VertexProperty.element()` and `Property.element()` data in GraphSON serialization.
 * GraphSON 3.0 is now the default serialization format in TinkerGraph and Gremlin Server.
 * Established the GraphSON 3.0 format.
+* Changed `ServerGremlinExecutor` to not use generics since there really is no flexibility in the kind of `ScheduledExecutorService` that will be used.
+* Removed previously deprecated `useMapperFromGraph` option.
 * Removed previously deprecated `Io.Builder#registry(IoRegistry)` method.
 * Removed previously deprecated `GryoMessageSerializerV1d0(GryoMapper)` constructor.
 * Removed previously deprecated `TinkerIoRegistry`.
 * Removed previously deprecated `getInstance()` methods on all TinkerPop classes.
 * Removed previously deprecated `VertexPropertyFeatures.supportsAddProperty()`.
 * Removed previously deprecated TinkerGraph configuration member variables.
-* Changed `ServerGremlinExecutor` to not use generics since there really is no flexibility in the kind of `ScheduledExecutorService` that will be used.
 * Removed previously deprecated `Transaction.submit(Function)`.
 * Removed previously deprecated `OpSelectorHandler.errorMeter` and `AbstractEvalOpProcessor.errorMeter` fields.
 * Removed previously deprecated `AbstractEvalOpProcessor.validBindingName` field.
